Main section improved and make responsive with media Queries.

--- a/Equipo.html
+++ b/Equipo.html
@@ -28,7 +28,7 @@
                 <!-- Miembro del equipo 1 -->
                 <div class="col-md-4">
                     <div class="team-card">
-                        <img src="./IMG/darwing.DAVI.PF.png" alt="Darwing Mosquera" class="team-img">
+                        <img src="./images/darwing.DAVI.PF.png" alt="Darwing Mosquera" class="team-img">
                         <h3>Darwing Mosquera</h3>
                         <p class="role">Administrador de Empresas</p>
                         <p>Con experiencia en la gestión estratégica de negocios, Darwing lidera la administración y organización de nuestra empresa.</p>
@@ -37,7 +37,7 @@
                 <!-- Miembro del equipo 2 -->
                 <div class="col-md-4">
                     <div class="team-card">
-                        <img src="./IMG/HenryGabrielfp.jpg" alt="Henry Mosquera" class="team-img">
+                        <img src="./images/HenryGabrielfp.jpg" alt="Henry Mosquera" class="team-img">
                         <h3>Henry Mosquera</h3>
                         <p class="role">Auxiliar de Enfermería</p>
                         <p>Apasionado por el cuidado y el bienestar de las personas, Henry aporta su experiencia en el área de la salud.</p>
@@ -46,7 +46,7 @@
                 <!-- Miembro del equipo 3 -->
                 <div class="col-md-4">
                     <div class="team-card">
-                        <img src="./IMG/AydaLuzserna.png" alt="Miembro del equipo" class="team-img">
+                        <img src="./images/AydaLuzserna.png" alt="Miembro del equipo" class="team-img">
                         <h3>Ayda Serna </h3>
                         <p class="role">Coordinadora</p>
                         <p>La Coordinadora desempeña un papel crucial en la organización, ya que actúa como el eje central para garantizar que todas las actividades y procesos operativos se lleven a cabo.</p>
