--- a/mision.html
+++ b/mision.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./mision.css">
+    <!-- <link rel="stylesheet" href="./mision.css"> -->
     <title>Misión de la Empresa</title>
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Enlace a la hoja de estilos personalizada -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="app.js">
 </head>
+
 <body>
     <!-- Hero Section -->
     <div class="hero-section">
@@ -23,22 +25,25 @@
     <div class="mission-section">
         <h2>¿Cuál es nuestra misión?</h2>
         <p>
-            En <strong>Salud en casa HG</strong>, nuestra misión es ofrecer servicios y productos de calidad excepcional, 
-            impulsando el crecimiento sostenible y la satisfacción de nuestros clientes. 
-            Nos esforzamos por fomentar un impacto positivo en nuestra comunidad, guiados por nuestros valores de integridad, innovación y compromiso.
+            En <strong>Salud en casa HG</strong>, nuestra misión es ofrecer servicios y productos de calidad
+            excepcional,
+            impulsando el crecimiento sostenible y la satisfacción de nuestros clientes.
+            Nos esforzamos por fomentar un impacto positivo en nuestra comunidad, guiados por nuestros valores de
+            integridad, innovación y compromiso.
         </p>
         <div class="text-center">
-            <a href="https://wa.me/573145352774"class="btn-primary-custom">Contáctanos</a>
+            <a href="https://wa.me/573145352774" class="btn-primary-custom">Contáctanos</a>
         </div>
     </div>
 
 
-       <!-- Botón de inicio -->
-       <div class="text-center mt-1">
+    <!-- Botón de inicio -->
+    <div class="text-center mt-1">
         <a href="index.html" class="btn-home">Volver al Inicio</a>
     </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
