--- a/Equipo.html
+++ b/Equipo.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipo de Trabajo</title>
     <!-- Enlace a Bootstrap -->
-     
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Enlace a la hoja de estilos personalizada -->
-    <link rel="stylesheet" href="Equipo.css">
+    <link rel="stylesheet" href="css/equipo.css">
+    <link rel="stylesheet" href="./css/app.css">
 </head>
+
 <body>
-    <!-- Hero Section -->
     <div class="hero-section">
         <div class="hero-content">
             <h1>Nuestro Equipo</h1>
@@ -22,7 +24,8 @@
     <!-- Sección del Equipo -->
     <div class="equipo-section">
         <h2>Equipo de Trabajo</h2>
-        <p class="intro-text">Nuestro equipo está compuesto por profesionales comprometidos y apasionados que trabajan juntos para ofrecer el mejor servicio.</p>
+        <p class="intro-text">Nuestro equipo está compuesto por profesionales comprometidos y apasionados que trabajan
+            juntos para ofrecer el mejor servicio.</p>
         <div class="container">
             <div class="row">
                 <!-- Miembro del equipo 1 -->
@@ -31,7 +34,8 @@
                         <img src="./images/darwing.DAVI.PF.png" alt="Darwing Mosquera" class="team-img">
                         <h3>Darwing Mosquera</h3>
                         <p class="role">Administrador de Empresas</p>
-                        <p>Con experiencia en la gestión estratégica de negocios, Darwing lidera la administración y organización de nuestra empresa.</p>
+                        <p>Con experiencia en la gestión estratégica de negocios, Darwing lidera la administración y
+                            organización de nuestra empresa.</p>
                     </div>
                 </div>
                 <!-- Miembro del equipo 2 -->
@@ -40,7 +44,8 @@
                         <img src="./images/HenryGabrielfp.jpg" alt="Henry Mosquera" class="team-img">
                         <h3>Henry Mosquera</h3>
                         <p class="role">Auxiliar de Enfermería</p>
-                        <p>Apasionado por el cuidado y el bienestar de las personas, Henry aporta su experiencia en el área de la salud.</p>
+                        <p>Apasionado por el cuidado y el bienestar de las personas, Henry aporta su experiencia en el
+                            área de la salud.</p>
                     </div>
                 </div>
                 <!-- Miembro del equipo 3 -->
@@ -49,7 +54,9 @@
                         <img src="./images/AydaLuzserna.png" alt="Miembro del equipo" class="team-img">
                         <h3>Ayda Serna </h3>
                         <p class="role">Coordinadora</p>
-                        <p>La Coordinadora desempeña un papel crucial en la organización, ya que actúa como el eje central para garantizar que todas las actividades y procesos operativos se lleven a cabo.</p>
+                        <p>La Coordinadora desempeña un papel crucial en la organización, ya que actúa como el eje
+                            central para garantizar que todas las actividades y procesos operativos se lleven a cabo.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -59,9 +66,31 @@
     <!-- Botón de inicio -->
     <div class="text-center mt-4">
         <a href="index.html" class="btn-home">Volver al Inicio</a>
-    </div>
+    </div> <br>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <p>Para más información sobre nuestros servicios visita nuestras redes sociales</p>
+            <!-- <p>Síguenos en nuestras redes sociales</p> -->
+            <div class="social-icons">
+                <a href="https://web.facebook.com/profile.php?id=61570875688056&_rdc=11&_rdr" target="_blank"
+                    class="social-icon">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                        alt="Facebook">
+                </a>
+                <a href="https://wa.me/573145352774" target="_blank" class="social-icon">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+                </a>
+                <a href="https://www.instagram.com/domi_ciliaria/" target="_blank" class="social-icon">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+                </a>
+            </div>
+        </div>
+        <p>&copy; 2024 Salud en Casa. Todos los derechos reservados.</p>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
