--- a/vision.html
+++ b/vision.html
@@ -1,43 +1,102 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mision.css">
     <title>Visión de la Empresa</title>
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Enlace a la hoja de estilos personalizada -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/mision.css">
+    <link rel="shortcut icon" href="./images/icono.png" type="image/x-icon">
+
 </head>
+
 <body>
-    <!-- Hero Section -->
-    <div class="hero-section">
-        <div class="hero-content">
-            <h1>Nuestra Visión</h1>
-            <p>Aspiramos a ser líderes en el sector, transformando vidas con innovación y excelencia.</p>
-        </div>
-    </div>
+    <header>
 
-    <!-- Vision Section -->
-    <div class="vision-section">
-        <h2>¿Hacia dónde vamos?</h2>
-        <p>
-            Nuestra visión en <strong>Salud en casa HG</strong> es convertirnos en referentes a nivel nacional e internacional, 
-            destacándonos por nuestra capacidad de ofrecer soluciones integrales y personalizadas. 
-            Nos proyectamos como una organización que inspira confianza, impulsa el desarrollo sostenible y fomenta el bienestar de nuestras comunidades.
-        </p>
-        <div class="text-center">
-            <a href="#contact" class="btn-primary-custom">Contáctanos</a>
-        </div>
-    </div>
+        <nav class="navbar">
+            <div class="nav-item">
+                <button class="nav-button" onclick="window.location.href='index.html'">Home</button>
+            </div>
 
-    <!-- Botón de inicio -->
-    <div class="text-center mt-4">
-        <a href="index.html" class="btn-home">Volver al Inicio</a>
-    </div>
+            <div class="nav-item">
+                <button class="nav-button" onclick="toggleDropdown('servicios')">Listado de Servicios</button>
+                <ul id="servicios" class="dropdown">
+                    <li><a href="./#inyectologia">Inyectología</a></li>
+                    <li><a href="#curaciones">Curaciones</a></li>
+                    <li><a href="#sueroterapia">Sueroterapia</a></li>
+                    <li><a href="#adminitracionMedicamentos">Administracion de medicamentos</a></li>
+                    <li><a href="#tomaDePresion">Toma de presion seriada</a></li>
+                    <li><a href="#retiroDePuntos">Retiro de puntos</a></li>
+                    <li><a href="#cambioSonda">Cambio de sonda vesical</a></li>
+                    <li><a href="#cambioSondamasograstrica">Cambio de sonda nasogastrica</a></li>
+                    <li><a href="#sueroterapia">Hidratacion por via venosa </a></li>
+                </ul>
+            </div>
+
+            <div class="nav-item">
+                <button class="nav-button" onclick="toggleDropdown('nosotros')">Nosotros</button>
+                <ul id="nosotros" class="dropdown">
+                    <li><a href="mision.html">Misión</a></li>
+                    <li><a href="vision.html">Visión</a></li>
+                    <li><a href="Equipo.html">Equipo</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Main Section -->
+    <main>
+        <div class="hero-section">
+            <div class="hero-content">
+                <h1>Nuestra Visión</h1>
+                <p>Aspiramos a ser líderes en el sector, transformando vidas con innovación y excelencia.</p>
+            </div>
+        </div>
+
+        <div class="vision-section">
+            <h2>¿Hacia dónde vamos?</h2>
+            <p>
+                Nuestra visión en <strong>Salud en casa HG</strong> es convertirnos en referentes a nivel nacional e
+                internacional,
+                destacándonos por nuestra capacidad de ofrecer soluciones integrales y personalizadas.
+                Nos proyectamos como una organización que inspira confianza, impulsa el desarrollo sostenible y fomenta
+                el
+                bienestar de nuestras comunidades.
+            </p>
+            <div class="text-center">
+                <a href="#contact" class="btn-primary-custom">Contáctanos</a>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="social-icons">
+                <a href="https://web.facebook.com/profile.php?id=61570875688056&_rdc=11&_rdr" target="_blank"
+                    class="social-icon">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+                        alt="Facebook">
+                </a>
+                <a href="https://wa.me/573145352774" target="_blank" class="social-icon">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+                </a>
+                <a href="https://www.instagram.com/domi_ciliaria/" target="_blank" class="social-icon">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+                </a>
+            </div>
+        </div>
+        <p>&copy; 2024 Salud en Casa. Todos los derechos reservados.</p>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/app.js"></script>
+
 </body>
+
 </html>
