Vision and equipo section finished

--- a/mision.html
+++ b/mision.html
@@ -87,7 +87,7 @@
                 </a>
             </div>
         </div>
-        <p>&copy; 2024 Salud en Casa. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Salud en Casa (ALAS). Todos los derechos reservados.</p>
     </footer>
 
     <!-- Bootstrap JS -->
