--- a/vision.html
+++ b/vision.html
@@ -50,8 +50,8 @@
 
     <!-- Main Section -->
     <main>
-        <div class="hero-section">
-            <div class="hero-content">
+        <div class="mision">
+            <div class="mision-content">
                 <h1>Nuestra Visión</h1>
                 <p>Aspiramos a ser líderes en el sector, transformando vidas con innovación y excelencia.</p>
             </div>
@@ -66,7 +66,7 @@
                 Nos proyectamos como una organización que inspira confianza, impulsa el desarrollo sostenible y fomenta
                 el
                 bienestar de nuestras comunidades.
-            </p>
+            </p><br>
             <div class="text-center">
                 <a href="#contact" class="btn-primary-custom">Contáctanos</a>
             </div>
@@ -90,7 +90,7 @@
                 </a>
             </div>
         </div>
-        <p>&copy; 2024 Salud en Casa. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Salud en Casa (ALAS). Todos los derechos reservados.</p>
     </footer>
 
     <!-- Bootstrap JS -->
