Mision section finished. First part of the project done. Waiting for the deployment.

--- a/mision.html
+++ b/mision.html
@@ -48,8 +48,8 @@
     </header>
 
     <main>
-        <div class="hero-section">
-            <div class="hero-content">
+        <div class="mision">
+            <div class="mision-content">
                 <h1>Nuestra Misión</h1>
                 <p>Trabajamos para transformar vidas y brindar soluciones innovadoras con excelencia y compromiso.</p>
             </div>
