Fixed some common issues in the main and  Header sections.

--- a/mision.html
+++ b/mision.html
@@ -18,7 +18,7 @@
 
         <nav class="navbar">
             <div class="nav-item">
-                <button class="nav-button" onclick="window.location.href='index.html'">Home</button>
+                <button class="nav-button" onclick="window.location.href='index.html'">Inicio</button>
             </div>
 
             <div class="nav-item">
@@ -58,7 +58,7 @@
         <div class="mission-section">
             <h2>¿Cuál es nuestra misión?</h2>
             <p>
-                En <strong>Salud en casa HG</strong>, nuestra misión es ofrecer servicios y productos de calidad
+                En <strong>Salud en casa ALAS</strong>, nuestra misión es ofrecer servicios y productos de calidad
                 excepcional,
                 impulsando el crecimiento sostenible y la satisfacción de nuestros clientes.
                 Nos esforzamos por fomentar un impacto positivo en nuestra comunidad, guiados por nuestros valores de
