--- a/vision.html
+++ b/vision.html
@@ -19,7 +19,7 @@
 
         <nav class="navbar">
             <div class="nav-item">
-                <button class="nav-button" onclick="window.location.href='index.html'">Home</button>
+                <button class="nav-button" onclick="window.location.href='index.html'">Inicio</button>
             </div>
 
             <div class="nav-item">
@@ -60,7 +60,7 @@
         <div class="vision-section">
             <h2>¿Hacia dónde vamos?</h2>
             <p>
-                Nuestra visión en <strong>Salud en casa HG</strong> es convertirnos en referentes a nivel nacional e
+                Nuestra visión en <strong>Salud en casa ALAS</strong> es convertirnos en referentes a nivel nacional e
                 internacional,
                 destacándonos por nuestra capacidad de ofrecer soluciones integrales y personalizadas.
                 Nos proyectamos como una organización que inspira confianza, impulsa el desarrollo sostenible y fomenta
