--- a/Equipo.html
+++ b/Equipo.html
@@ -34,7 +34,7 @@
                         <img src="./images/darwing.DAVI.PF.png" alt="Darwing Mosquera" class="team-img">
                         <h3>Darwing Mosquera</h3>
                         <p class="role">Administrador de Empresas</p>
-                        <p>Con experiencia en la gestión estratégica de negocios, Darwing lidera la administración y
+                        <p>Con experiencia en la gestión estratégica de negocios, Darwing lidera la logistica, manejo y
                             organización de nuestra empresa.</p>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                         <img src="./images/AydaLuzserna.png" alt="Miembro del equipo" class="team-img">
                         <h3>Ayda Serna </h3>
                         <p class="role">Coordinadora</p>
-                        <p>La Coordinadora desempeña un papel crucial en la organización, ya que actúa como el eje
+                        <p>Desempeña un papel crucial en la organización, ya que actúa como el eje
                             central para garantizar que todas las actividades y procesos operativos se lleven a cabo.
                         </p>
                     </div>
