--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salud en Casa HG</title>
+    <title>Salud en Casa ALAS</title>
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-item">
-                <button class="nav-button" onclick="window.location.href='index.html'">Home</button>
+                <button class="nav-button" onclick="window.location.href='index.html'">Inicio</button>
             </div>
 
             <div class="nav-item">
