Fixed issue to access to section 'Equipo.html.'

--- a/vision.html
+++ b/vision.html
@@ -42,7 +42,7 @@
                 <ul id="nosotros" class="dropdown">
                     <li><a href="mision.html">Misión</a></li>
                     <li><a href="vision.html">Visión</a></li>
-                    <li><a href="Equipo.html">Equipo</a></li>
+                    <li><a href="equipo.html">Equipo</a></li>
                 </ul>
             </div>
         </nav>
