--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <div id="google_translate_element"></div> 
+
     <header>
         <nav class="navbar">
             <div class="nav-item">
@@ -141,6 +143,25 @@
 
 
     <script src="./js/app.js"></script>
+
+
+        <div id="google_translate_element"></div> 
+<!--idioma-->
+<script type="text/javascript">  
+    function googleTranslateElementInit() {  
+        new google.translate.TranslateElement(  
+            {pageLanguage: 'en'},  
+            'google_translate_element'  
+        );  
+    }  
+</script>  
+
+<!-- Script code for google translator API -->  
+<script type="text/javascript"   
+src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">  
+</script>  
+
+<!---and idioma-->
 </body>
 
 </html>
