--- a/Equipo.html
+++ b/Equipo.html
@@ -4,13 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipo de Trabajo</title>
+    <meta name="description"
+        content="Conoce a nuestro equipo de profesionales en Salud en Casa, dedicados a mejorar tu calidad de vida con atención personalizada y experiencia comprobada.">
+    <meta name="keywords"
+        content="equipo de salud, profesionales de la salud, atención médica, equipo especializado, salud en casa">
+    <meta name="author" content="DARWING MOSQUERA, HENRY ANDRADE, AYDA SERNA">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Nuestro Equipo | Salud en Casa">
+    <meta property="og:description"
+        content="Descubre a los expertos que forman parte de Salud en Casa y trabajan para cuidar de ti y tu familia.">
+    <!-- <meta property="og:image" content="https://example.com/images/team.jpg"> -->
+    <meta property="og:url" content="https://github.com/henryandalejandro/salud_en_casa/equipo.html">
+    <title>Nuestro Equipo | Salud en Casa</title>
     <!-- Enlace a Bootstrap -->
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Enlace a la hoja de estilos personalizada -->
     <link rel="stylesheet" href="css/equipo.css">
     <link rel="stylesheet" href="./css/app.css">
+    <link rel="shortcut icon" href="./images/Logo.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -42,8 +53,8 @@
                 <!-- Miembro del equipo 2 -->
                 <div class="col-md-4">
                     <div class="team-card">
-                        <img src="./images/HenryGabrielfp.jpg" alt="Henry Mosquera" class="team-img">
-                        <h3>Henry Mosquera</h3>
+                        <img src="./images/HenryGabrielfp.jpg" alt="Henry Andrade" class="team-img">
+                        <h3>Henry Andrade</h3>
                         <p class="role">Auxiliar de Enfermería</p>
                         <p>Apasionado por el cuidado y el bienestar de las personas, Henry aporta su experiencia en el
                             área de la salud.</p>
@@ -91,7 +102,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  
+
 </body>
 
 </html>
