--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta lang="es">
+    <meta name="audience" content="all">
+    <meta name="description"
+        content="Salud en Casa ALAS - Tu mejor aliado para el cuidado de tu salud desde la comodidad de tu hogar. Ofrecemos servicios de enfermería a domicilio en el valle de Aburra: Inyectología, administración de medicamentos, cambio de sonda, Retiro de puntos, Curaciones, Sueroterapia, Toma de presion arterial y más." />
+    <meta name="keywords"
+        content="administración de medicamentos, aplicación de inyecciones, atención médica, cambio de sonda, curaciones, enfermería, inyectología, medicina, medicamentos, retiro de puntos, salud domiciliaria, salud en casa, sueroterapia, toma de presión" />
+    <meta name="author" content="DARWING MOSQUERA, HENRY ANDRADE, AYDA SERNA">
+    <meta name="robots" content="index, all, follow">
+    <meta name="category" content="salud domiciliaria">
+    <meta itemprop="telephone" content="3145352774">
+    <meta property="og:title" content="Salud en Casa - Cuidado y atención desde tu hogar">
+    <meta property="og:description"
+        content="En Salud en Casa, trabajamos para liderar el cambio en la atención médica desde casa, con accesibilidad y confianza.">
+    <!-- <meta property="og:image" content="https://example.com/images/vision.jpg"> -->
+    <meta property="og:url" content="https://github.com/henryandalejandro/salud_en_casa/vision.html">
     <title>Salud en Casa ALAS</title>
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,10 +26,16 @@
     <link rel="shortcut icon" href="./images/icono.png" type="image/x-icon">
 </head>
 
-<body> 
+<body>
 
     <header>
+
         <nav class="navbar">
+
+            <div class="logo">
+                <img src="./images/Logo.png" alt="Logo_Salud_en_Casa" onclick="window.location.href='index.html'">
+            </div>
+
             <div class="nav-item">
                 <button class="nav-button" onclick="window.location.href='index.html'">Inicio</button>
             </div>
@@ -42,6 +63,7 @@
                     <li><a href="equipo.html">Equipo</a></li>
                 </ul>
             </div>
+
         </nav>
     </header>
 
@@ -144,7 +166,7 @@
     <script src="./js/app.js"></script>
 
 
-        <div id="google_translate_element"></div> 
+    <div id="google_translate_element"></div>
 
 </body>
 
