--- a/mision.html
+++ b/mision.html
@@ -4,13 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Misión de la Empresa</title>
+    <meta name="description"
+        content="Nuestra misión es brindar servicios de salud accesibles y confiables desde la comodidad de tu hogar. Con Salud en Casa, cuidamos de ti y de los tuyos.">
+    <meta name="keywords" content="misión, salud en casa, servicios de salud, atención en casa, accesibilidad médica">
+    <meta name="author" content="DARWING MOSQUERA, HENRY ANDRADE, AYDA SERNA">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Nuestra Misión | Salud en Casa">
+    <meta property="og:description"
+        content="Conoce la misión de Salud en Casa y descubre cómo trabajamos para hacer la salud accesible desde el hogar.">
+    <!-- <meta property="og:image" content="https://example.com/images/mission.jpg"> -->
+    <meta property="og:url" content="https://github.com/henryandalejandro/salud_en_casa/mision.html">
+    <title>Misión | Salud en Casa</title>
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Enlace a la hoja de estilos personalizada -->
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="./css/mision.css">
-    <link rel="shortcut icon" href="./images/icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/Logo.jpg" type="image/x-icon">
+
 </head>
 
 <body>
@@ -26,14 +37,14 @@
                 <button class="nav-button" onclick="toggleDropdown('servicios')">Listado de Servicios</button>
                 <ul id="servicios" class="dropdown">
                     <li><a href="./#inyectologia">Inyectología</a></li>
-                    <li><a href="#curaciones">Curaciones</a></li>
-                    <li><a href="#sueroterapia">Sueroterapia</a></li>
-                    <li><a href="#adminitracionMedicamentos">Administracion de medicamentos</a></li>
-                    <li><a href="#tomaDePresion">Toma de presion seriada</a></li>
-                    <li><a href="#retiroDePuntos">Retiro de puntos</a></li>
-                    <li><a href="#cambioSonda">Cambio de sonda vesical</a></li>
-                    <li><a href="#cambioSondamasograstrica">Cambio de sonda nasogastrica</a></li>
-                    <li><a href="#sueroterapia">Hidratacion por via venosa </a></li>
+                    <li><a href="./#curaciones">Curaciones</a></li>
+                    <li><a href="./#sueroterapia">Sueroterapia</a></li>
+                    <li><a href="./#adminitracionMedicamentos">Administracion de medicamentos</a></li>
+                    <li><a href="./#tomaDePresion">Toma de presion seriada</a></li>
+                    <li><a href="./#retiroDePuntos">Retiro de puntos</a></li>
+                    <li><a href="./#cambioSonda">Cambio de sonda vesical</a></li>
+                    <li><a href="./#cambioSondamasograstrica">Cambio de sonda nasogastrica</a></li>
+                    <li><a href="./#sueroterapia">Hidratacion por via venosa </a></li>
                 </ul>
             </div>
 
@@ -94,7 +105,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
-    
+
 
 </body>
 
