--- a/vision.html
+++ b/vision.html
@@ -4,20 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visión de la Empresa</title>
+
+    <meta name="description"
+        content="Nuestra visión es transformar la atención médica en casa y ser líderes en soluciones de salud accesibles y confiables. Descubre cómo trabajamos para alcanzar este objetivo.">
+    <meta name="keywords" content="visión, futuro de la salud, salud en casa, atención médica, servicios de salud">
+    <meta name="author" content="DARWING MOSQUERA, HENRY ANDRADE, AYDA SERNA">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Nuestra Visión | Salud en Casa">
+    <meta property="og:description"
+        content="En Salud en Casa, trabajamos para liderar el cambio en la atención médica desde casa, con accesibilidad y confianza.">
+    <meta property="og:image" content="https://example.com/images/vision.jpg">
+    <meta property="og:url" content="https://github.com/henryandalejandro/salud_en_casa/vision.html">
+    <meta name="twitter:card" content="summary_large_image">
+    <title>Visión | Salud en Casa</title>
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Enlace a la hoja de estilos personalizada -->
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="./css/mision.css">
-    <link rel="shortcut icon" href="./images/icono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/Logo.jpg" type="image/x-icon">
 
 </head>
 
 <body>
 
     <header>
-   
+
 
         <nav class="navbar">
             <div class="nav-item">
@@ -28,14 +40,14 @@
                 <button class="nav-button" onclick="toggleDropdown('servicios')">Listado de Servicios</button>
                 <ul id="servicios" class="dropdown">
                     <li><a href="./#inyectologia">Inyectología</a></li>
-                    <li><a href="#curaciones">Curaciones</a></li>
-                    <li><a href="#sueroterapia">Sueroterapia</a></li>
-                    <li><a href="#adminitracionMedicamentos">Administracion de medicamentos</a></li>
-                    <li><a href="#tomaDePresion">Toma de presion seriada</a></li>
-                    <li><a href="#retiroDePuntos">Retiro de puntos</a></li>
-                    <li><a href="#cambioSonda">Cambio de sonda vesical</a></li>
-                    <li><a href="#cambioSondamasograstrica">Cambio de sonda nasogastrica</a></li>
-                    <li><a href="#sueroterapia">Hidratacion por via venosa </a></li>
+                    <li><a href="./#curaciones">Curaciones</a></li>
+                    <li><a href="./#sueroterapia">Sueroterapia</a></li>
+                    <li><a href="./#adminitracionMedicamentos">Administracion de medicamentos</a></li>
+                    <li><a href="./#tomaDePresion">Toma de presion seriada</a></li>
+                    <li><a href="./#retiroDePuntos">Retiro de puntos</a></li>
+                    <li><a href="./#cambioSonda">Cambio de sonda vesical</a></li>
+                    <li><a href="./#cambioSondamasograstrica">Cambio de sonda nasogastrica</a></li>
+                    <li><a href="./#sueroterapia">Hidratacion por via venosa </a></li>
                 </ul>
             </div>
 
@@ -98,7 +110,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
-  
+
 
 </body>
 
