--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
         <nav class="navbar">
 
             <div class="logo">
-                <img src="./images/Logo.png" alt="Logo_Salud_en_Casa" onclick="window.location.href='index.html'">
+                <img class="icono" src="./images/Logo.png" alt="Logo_Salud_en_Casa" onclick="window.location.href='index.html'">
             </div>
 
             <div class="nav-item">
