--- a/vision.html
+++ b/vision.html
@@ -32,6 +32,11 @@
 
 
         <nav class="navbar">
+            <div class="logo">
+                <img class="icono" src="./images/Logo.png" alt="Logo_Salud_en_Casa"
+                    onclick="window.location.href='./index.html'">
+            </div>
+
             <div class="nav-item">
                 <button class="nav-button" onclick="window.location.href='index.html'">Inicio</button>
             </div>
