Deployment did not work. Second try

--- a/public/mision.html
+++ b/public/mision.html
@@ -20,8 +20,7 @@
     <!-- Enlace a la hoja de estilos personalizada -->
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="./css/mision.css">
-    <link rel="shortcut icon" href="./images/Logo.jpg" type="image/x-icon">
-
+    <link rel="shortcut icon" href="./images/icono.png" type="image/x-icon">
 </head>
 
 <body>
