--- a/public/Equipo.html
+++ b/public/Equipo.html
@@ -21,8 +21,7 @@
     <!-- Enlace a la hoja de estilos personalizada -->
     <link rel="stylesheet" href="css/equipo.css">
     <link rel="stylesheet" href="./css/app.css">
-    <link rel="shortcut icon" href="./images/Logo.jpg" type="image/x-icon">
-</head>
+    <link rel="shortcut icon" href="./images/icono.png" type="image/x-icon"></head>
 
 <body>
 
